--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,7 @@ jobs:
       # 3. 安装依赖
       - name: Install dependencies
         run: |
-          pnpm install --frozen-lockfile
+          pnpm install 
       # 4. 构建项目
       - name: Build VitePress site
         run: pnpm run build  # 确保 package.json 中有 "build" 脚本
