--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
     "vitepress": "^1.6.4"
+  },
+  "dependencies": {
+    "myBlog": "link:"
   }
 }
